# tauri_ico_gen

./: Cargo.toml
src/: img_operate.rs  lib.rs  main.rs  quick_scale.rs  utils.rs
