[package]
name = "tauri-ico-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image =  "0.24.9"
eyre = "0.6.12"
fast_image_resize = "3.0.4"

[profile.release]
strip = true
opt-level = "s"
lto  = true
codegen-units = 1
